--- a/index.html
+++ b/index.html
@@ -355,15 +355,15 @@
 											<div class="12u">
 												<select id="elementsSelector" name="elementsSelector">
 													<option value="0" class="placeholder" selected disabled>Número de elementos</option>
-													<option value="1" name="1">Um Elemento</option>
-													<option value="2" name="2">Dois Elementos</option>
-													<option value="3" name="3">Três Elementos</option>
-													<option value="4" name="4">Quatro Elementos</option>
-													<option value="5" name="4">Cinco Elementos</option>
-													<option value="6" name="4">Seis Elementos</option>
-													<option value="7" name="4">Sete Elementos</option>
-													<option value="8" name="4">Oito Elementos</option>
-													<option value="9" name="4">Nove Elementos</option>
+													<option value="1" name="1">1</option>
+													<option value="2" name="2">2</option>
+													<option value="3" name="3">3</option>
+													<option value="4" name="4">4</option>
+													<option value="5" name="4">5</option>
+													<option value="6" name="4">6</option>
+													<option value="7" name="4">7</option>
+													<option value="8" name="4">8</option>
+													<option value="9" name="4">9</option>
 												</select>
 											</div>
 										</div>
@@ -509,7 +509,7 @@
 											</div>
 										</div>
 										<span id="ErrorUploadProjecto"></span>
-										<h6 class="12u" id="ProjectoRec">O ficheiro deve ter o formato <span id="RightFileName">CATEGORIA_NOME_DA_EQUIPA.zip </span>e não deve exceder os 100mb</h6>
+										<h6 class="12u" id="ProjectoRec">O ficheiro deve ter o formato <span id="RightFileName">CATEGORIA_NOME_DA_EQUIPA.zip </span>e não deve exceder os 100MB em tamanho.</h6>
 										<!--<input id="projectLink" type="text" class="text" name="projectLink" placeholder="Link para o ficheiro" />-->
 									</div>		
 								</div>
