--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 										<div id="elements" style="margin-bottom: 10px;">
 											<br>
 											<div id="element1" class="row half">
-												<h2>Primeiro Elemento - Responsavel</h2>
+												<h2>Primeiro Elemento - Responsável</h2>
 												<div class="row">
 													<div class="6u"><input type="text" class="text" id="name1" name="name1" placeholder="Nome" /><span id="ErrorName1"></span></div>
 													<div class="6u"><input type="text" class="text" id="email1" name="email1" placeholder="Email" /><span id="ErrorEmail1"></span></div>
