Modified Add element process

--- a/index.html
+++ b/index.html
@@ -351,124 +351,23 @@
 												<span id="ErrorProjectname"></span>
 											</div>
 										</div>
-										<div class="half row">
-											<div class="12u">
-												<select id="elementsSelector" name="elementsSelector">
-													<option value="0" class="placeholder" selected disabled>Número de elementos</option>
-													<option value="1" name="1">Um Elemento</option>
-													<option value="2" name="2">Dois Elementos</option>
-													<option value="3" name="3">Três Elementos</option>
-													<option value="4" name="4">Quatro Elementos</option>
-													<option value="5" name="4">Cinco Elementos</option>
-													<option value="6" name="4">Seis Elementos</option>
-													<option value="7" name="4">Sete Elementos</option>
-													<option value="8" name="4">Oito Elementos</option>
-													<option value="9" name="4">Nove Elementos</option>
-												</select>
-											</div>
-										</div>
-										<div id="elements" style="margin-bottom: 10px;">
-											<br>
+										<div id="elements" style="margin-bottom: 10px; margin-top: 20px;">
 											<div id="element1" class="row half">
-												<h2>Primeiro Elemento - Responsavel</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name1" name="name1" placeholder="Nome" /><span id="ErrorName1"></span></div>
-													<div class="6u"><input type="text" class="text" id="email1" name="email1" placeholder="Email" /><span id="ErrorEmail1"></span></div>
+												<h2 style>1º Elemento - Responsavel</h2>
+												<div class="row" style="margin-bottom: 20px;">
+													<div class="6u"><input type="text" class="text" id="name1" name="name1" placeholder="Nome" /><span id="Errorname1"></span></div>
+													<div class="6u"><input type="text" class="text" id="email1" name="email1" placeholder="Email" /><span id="Erroremail1"></span></div>
 												</div>
 												<div class="row row2">
-														<div class="6u"><input type="text" class="text" id="cellphone1" name="cellphone1" placeholder="Telemóvel" /><span id="ErrorCellphone1"></span></div>
+														<div class="6u"><input type="text" class="text" id="cellphone1" name="cellphone1" placeholder="Telemóvel" /><span id="Errorcellphone1"></span></div>
 														<!--<div class="6u"><input type="text" class="text" id="institution1" name="institution1" placeholder="Instituição" /></div>-->
 												</div>												
 											</div>
-											<br>
-											<div id="element2" class="row half">
-												<h2>Segundo Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name2" name="name2" placeholder="Nome" /><span id="ErrorName2"></span></div>
-													<div class="6u"><input type="text" class="text" id="email2" name="email2" placeholder="Email" /><span id="ErrorEmail2"></span></div>
-											 <!--<div class="row row2">
-													<div class="6u"><input type="text" class="text" id="cellphone2" name="cellphone2" placeholder="Telemóvel" /></div>
-													<div class="6u"><input type="text" class="text" id="institution2" name="institution2" placeholder="Instituição" /></div>
-												</div>-->
-												</div>
-											</div>
-											<br>
-											<div id="element3" class="row half">
-												<h2>Terceiro Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name3" name="name3" placeholder="Nome" /><span id="ErrorName3"></span></div>
-													<div class="6u"><input type="text" class="text" id="email3" name="email3" placeholder="Email" /><span id="ErrorEmail3"></span></div>
-													<!--<div class="row row2">
-													 <div class="6u"><input type="text" class="text" id="cellphone3" name="cellphone3" placeholder="Telemóvel" /></div>
-													 <div class="6u"><input type="text" class="text" id="institution3" name="institution3" placeholder="Instituição" /></div>
-													</div>-->													
-												</div>
-											</div>
-											<br>
-											<div id="element4" class="row half">
-												<h2>Quarto Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name4" name="name4" placeholder="Nome" /><span id="ErrorName4"></span></div>
-													<div class="6u"><input type="text" class="text" id="email4" name="email4" placeholder="Email" /><span id="ErrorEmail4"></span></div>
-												<!--<div class="row row2">
-													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
-													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
-												</div>-->
-												</div>
-											</div>
-											<div id="element5" class="row half">
-												<h2>Quinto Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name5" name="name5" placeholder="Nome" /><span id="ErrorName5"></span></div>
-													<div class="6u"><input type="text" class="text" id="email5" name="email5" placeholder="Email" /><span id="ErrorEmail5"></span></div>
-												<!--<div class="row row2">
-													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
-													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
-												</div>-->
-												</div>
-											</div>
-											<div id="element6" class="row half">
-												<h2>Sexto Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name6" name="name6" placeholder="Nome" /><span id="ErrorName6"></span></div>
-													<div class="6u"><input type="text" class="text" id="email6" name="email6" placeholder="Email" /><span id="ErrorEmail6"></span></div>
-												<!--<div class="row row2">
-													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
-													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
-												</div>-->
-												</div>
-											</div>
-											<div id="element7" class="row half">
-												<h2>Setimo Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name7" name="name6" placeholder="Nome" /><span id="ErrorName7"></span></div>
-													<div class="6u"><input type="text" class="text" id="email7" name="email7" placeholder="Email" /><span id="ErrorEmail7"></span></div>
-												<!--<div class="row row2">
-													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
-													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
-												</div>-->
-												</div>
-											</div>
-											<div id="element8" class="row half">
-												<h2>Oitavo Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name8" name="name8" placeholder="Nome" /><span id="ErrorName8"></span></div>
-													<div class="6u"><input type="text" class="text" id="email8" name="email8" placeholder="Email" /><span id="ErrorEmail8"></span></div>
-												<!--<div class="row row2">
-													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
-													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
-												</div>-->
-												</div>
-											</div>
-											<div id="element9" class="row half">
-												<h2>Nono Elemento</h2>
-												<div class="row">
-													<div class="6u"><input type="text" class="text" id="name9" name="name9" placeholder="Nome" /><span id="ErrorName9"></span></div>
-													<div class="6u"><input type="text" class="text" id="email9" name="email9" placeholder="Email" /><span id="ErrorEmail9"></span></div>
-												<!--<div class="row row2">
-													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
-													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
-												</div>-->
+										</div>
+										<div id="NewElements" style="margin-top: 30px; margin-bottom: 10px;">
+											<div class="half row">
+												<div class="12u">
+		    										<a id="AddMember" class="button">+ Elemento</a>
 												</div>
 											</div>
 										</div>
