Modified the way the user register

--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
 											<div id="element1" class="row half">
 												<h2 style>1º Elemento - Responsável</h2>
 												<div class="row" style="margin-bottom: 20px;">
-													<div class="6u"><input type="text" class="text" id="name1" name="name1" placeholder="Nome" /><span id="Errorname1"></span></div>
-													<div class="6u"><input type="text" class="text" id="email1" name="email1" placeholder="Email" /><span id="Erroremail1"></span></div>
+													<div class="6u"><input type="text" class="text" id="name1" name="name[]" placeholder="Nome" /><span id="Errorname1"></span></div>
+													<div class="6u"><input type="text" class="text" id="email1" name="email[]" placeholder="Email" /><span id="Erroremail1"></span></div>
 												</div>
 												<div class="row row2">
 														<div class="6u"><input type="text" class="text" id="cellphone1" name="cellphone1" placeholder="Telemóvel" /><span id="Errorcellphone1"></span></div>
