Added Official Partners

--- a/index.html
+++ b/index.html
@@ -55,20 +55,16 @@
 
 		<!-- Header -->
 			<section id="header" class="dark">
-					<!-- <div class="container">
+					<div class="container">
 						<div class="row">
-							<div class="4u">
-								<h5>Patrocinador Global</h5>
-								<img class="main-sponsor-logo" src="images/oe.png">
-							</div>
-							<div class="8u">
-								<h5>Parceiros</h5>
-								<img class="sponsor-logo" src="images/nokia.png" style="padding: 9px">
+							<div class="6u">
+								<h6>Parceiros oficiais</h6>
+								<img class="sponsor-logo" src="images/miniclip.png">
 								<img class="sponsor-logo" src="images/microsoft.png">
 								<img class="sponsor-logo" src="images/faber.png" style="padding-bottom: 8px">
 							</div>
 						</div>
-					</div>-->
+					</div>
 				<header>
 					<img id="logoBanner" src="images/logobanner.png">
 					<p>O Innovation Awards é um concurso anual organizado pela <a href="http://sinfo.org/">SINFO</a>, que tem como objectivo incentivar e estimular a criatividade, empreendedorismo e espírito inovador dos estudantes universitários.</p>
