Fixed some thigs i forgot

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<a href="#third" id="setup-link" class="scrolly menuBorder">Prémios</a>-->
 				<a href="#third" id="usage-link" class="scrolly menuBorder">Prémios</a>
 				<a href="#fourth" id="usage-link" class="scrolly menuBorder">Inscrições</a>
-				<a href="./regulamento.pdf" target="_blank"> Regulamento</a>
+				<a href="files/regulamento.pdf" target="_blank"> Regulamento</a>
 			</nav>
 			<div class="MobileMenuIcon"><img src="images/menuSmall.png" width="28px" height="28px" style="margin-top: 10px; margin-right: 10px;"></div>
 			<div class="MobileMenu">	
