--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 									<header>
 										<h3>Para a competição de Videogames, os primeiros prémios são:</h3>
 									</header>
-									<p>Uma viagem à <a href="http://www.e3expo.com/">E3</a> com entrada de produtor!</p>
+									<p>Uma viagem à <a href="http://www.e3expo.com/">E3</a>!*</p>
 									<p>Uma fantástica Xbox One e Kinect 2!</p>
 								</section>
 							</div>
@@ -213,7 +213,7 @@
 									<header>
 										<h3>Para a competição de Lifestyle, os primeiros prémios são:</h3>
 									</header>
-									<p>Até 4 tablets de última geração!*</p>
+									<p>Até 4 tablets de última geração!**</p>
 								</section>
 							</div>
 						</div>
@@ -229,7 +229,7 @@
 									<header>
 										<h3>Para a competição de Social, os prémios são:</h3>
 									</header>
-									<p>Até 4 telemóveis de última geração!*</p>
+									<p>Até 4 telemóveis de última geração!**</p>
 								</section>
 							</div>
 						</div>
@@ -250,7 +250,8 @@
 							</div>
 						</div>
 
-						<div style="margin-top: 20px; margin-bottom: 0px"><span class="NotRed">(*) O número de gadgets atribuídos é de uma unidade por elemento do grupo, sendo o máximo de quatro por equipa.</span></div>
+						<div style="margin-top: 20px; margin-bottom: 0px"><span class="NotRed"><p>(*) Para um representante da equipa vencedora.</p>
+						<p>(**) O número de gadgets atribuídos é de uma unidade por elemento do grupo, sendo o máximo de quatro por equipa.</p></span></div>
 
 						<!--<div class="row">
 							<div class="2u" style="text-align:center;">
@@ -294,7 +295,7 @@
 
 		</section>
 				-->
-			<section id="fourth" class="main InsButton">
+			<!-- <section id="fourth" class="main InsButton">
 				<header>
 					<div class="container">
 						<h2>Periodo de inscrições aberto</h2>
@@ -304,13 +305,13 @@
 						</footer>
 					</div>
 				</header>
-			</section>
+			</section> -->
 			<section id="fourth" class="main AdminPanel">
-				<header>
+				<!---<header>
 					<div class="container">
 						<h2>Admin Panel</h2>
 					</div>
-				</header>
+				</header>-->
 				<div class="content style4 featured">
 					<div class="container small">
 						<form>
